# SPH-Simulation

./: .gitignore  CMakeLists.txt  imgui.ini
shaders/: box.frag  box.vert  mesh.frag  mesh.vert  particle.frag  particle.vert
src/: main.cpp
src/core/: Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/simulation/: Particle.h  ParticleUtils.h  RigidBody.h  RigidBodyUtils.h  SPHSolver.cpp  SPHSolver.h  SimParams.h  SmoothKernel.h  SpatialHash.cpp  SpatialHash.h
src/ui/: DebugUI.cpp  DebugUI.h
